--- a/CarRental/car.css
+++ b/CarRental/car.css
@@ -940,7 +940,7 @@ footer p{
 }
 
 
-@media (max-width: 414px){
+@media (max-width: 814px){
     body {
         padding: 0px;
         margin: 0px;
@@ -958,23 +958,28 @@ footer p{
 
     nav {
        position: relative;
-        height: 30px;
-        padding: 0px 0px;
+        height: 38px;
+        width: 98%;
+        padding: 0px;
 
     }
 
     nav ul {
-        position: relative;
+        position: fixed;
         display: block;
         text-align: center;
+        width: 98%;
+        padding-bottom: 20px;
         background-color:#000D6B;
-        top: -19px;
-        left: -100%;
+        left: -150%;
+        top: 20px;
+        padding-bottom: 50px;
+        transition: all ease-in-out 1s;
     }
 
     nav li {
         justify-self: center;
-        margin-top: 20px;
+        margin-top: 26px;
     }
 
 
@@ -984,10 +989,664 @@ footer p{
 
     nav .checkbtn {
         display: block;
+        cursor: pointer;
+        float: left;
     }
 
-    .checkbtn:checked ~ul {
+    #check:checked ~ ul {
         left: 0%;
-        transition: all ease-in-out 1s;
+        
     }
+
+/*main image nla*/
+main{
+    height: 250px;
+    padding-left: 10px;
+    width: 98%;
+    padding-top: 50px;
+    font-size: 18px;
+    align-content: center;
+    justify-content: center;
+}
+
+main h1 {
+    font-size: 20px;
+    padding-bottom: 30px;
+    padding-top: 10px;
+ }
+
+ main button {
+    height: 40px;
+    width: auto;
+    padding: 0px 20px 0px 20px;
+}
+
+
+.reg {
+        position: relative;
+        display: block;
+        padding: 20px;
+        font-size: 1.5em;
+        align-items: center;
+        top: 0px;
+        background-color: white;
+        width: 80%;
+        justify-self: center;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.685);
+        margin-bottom: -80px;
+}
+
+.reg .leftbox {
+    width: 90%;
+    height: auto;
+
+    background: none;
+ 
+    font-size: 20px;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+}
+
+.reg p {
+    padding-left: 0px;
+    
+}
+.reg .form input {
+    height: 35px;
+    width: 90%;
+    margin: 10px 0px; 
+    margin-left: 0px;
+}
+.reg .form2 {
+    margin-left: 0px;
+}
+
+.form2 input {
+    background-color: rgba(128, 128, 128, 0.199);
+    height: 35px;
+}
+
+.reg .form2 button {
+    height: 35px;
+    width: 99%;
+    justify-self: center;
+    padding-right: 0px;
+    
+}
+
+
+/*About US*/
+.about {
+    margin-top: 150px;
+    height: max-content;
+    justify-content: space-between;
+    padding: 0px 10px 0px 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    width: 90%;
+}
+
+.about .left {
+    width: 100%;
+}
+
+.about .left h1 {
+    color: #000d6b;
+    font-size: 1.5rem;
+}
+
+.about .left h3 {
+    color: orange;
+    cursor: pointer;
+}
+
+.about ion-icon {
+    color: orange;
+    vertical-align: middle;
+    font-size: 20px;
+    padding-bottom: 5px;
+    padding-right: 2px;
+}
+
+.left p{
+    font-size: .75rem;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.about .right{
+    height: 220px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-image: url(./bmw-offer.ecfb9ac1bf7b5ef615a6.png);
+    width: 90%;
+    padding-top: 0px;
+    margin: 0px;
+    
+}
+
+.left .down {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    margin-top: 12px;
+    font-size: 10px;
+    vertical-align: middle;
+}
+
+/*Services*/
+.land {
+    width: 90%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.span {
+    display: inline-block;
+    background-color: none;
+    justify-content: space-between;
+    margin-top: -50px;
+    font-size: small;
+    color: #1d1b1b8e;
+    padding: 0px 0px 0px 10px;
+}
+
+.span div {
+    margin-top: 40px;
+    font-size: .8rem;
+}
+
+.land a {
+    font-size: 1rem;
+}
+
+.span2 {
+    display: inline-block;
+    background-color: none;
+    justify-content: space-between;
+    margin-top: 20px;
+    font-size: small;
+    color: #1d1b1b8e;
+    padding: 0px 0px 0px 10px;
+}
+
+.span2 div {
+    margin-top: 40px;
+    font-size: .8rem;
+}
+
+
+
+/***********hot services***/
+.motor {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0px 0px 0px 10px;
+    width: 90%;
+}
+
+.motor h3 {
+    color: orange;
+    text-align: center;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    margin-top: 70px;
+    font-weight: bold;
+}
+
+
+.motor p {
+    color: #000d6b;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 50px;
+    margin-top: 15px;
+    font-size: 2rem;
+    line-height: 40px;
+}
+
+
+.motor a{
+    text-decoration: none;
+    color: #000d6b;
+    font-size: 1.2rem;
+    font-weight: bold;        
+}
+
+.model {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 40px;
+    margin-top: 30px;
+    font-size: smaller;
+    align-items: center;
+    font-weight: normal;
+}
+
+
+.model li {
+    list-style: none;
+    text-align: center;  
+    margin-bottom: -20px;
+    color: #1d1b1b8e;
+    font-size: smaller;     
+}
+
+.model ion-icon {
+    color: orange;
+    margin-right: 5px;
+    font-size: smaller;
+    vertical-align: inline;
+}
+    
+
+
+
+.mt {
+    display: inline-block;
+    justify-content: space-around;
+    margin-right: 10px;
+    font-size: 1.1rem;
+    color: black;
+    width: 95%;
+}
+.mt img {
+    width: 90%;
+    margin-top: 30px;
+    margin-bottom: 6px;
+}
+
+.mt div{
+    background-color: none;
+    margin-right: 0px;
+    line-height: 30px;
+    border: #01010a15 solid 2px;
+    border-radius: 5px;
+    height:max-content;
+    width: 99%;
+    margin-bottom: 30px;
+    text-align: center;
+    color: #000D6B;
+    font-size: normal;
+    padding-bottom: 10px;
+}
+
+.mt .btn1{
+    background-color: #000d6b;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.mt .btn2{
+    background-color: orange;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.mt button {
+    width: 140px;
+    padding: 0px 0px;
+    color: white;
+    cursor: pointer;
+    height: 30px;
+}
+
+
+/*mt2*/
+.mt2 {
+    display: inline-block;
+    justify-content: space-around;
+    margin-right: 10px;
+    font-size: 1.1rem;
+    color: black;
+    width: 95%;
+}
+.mt2 img {
+    width: 90%;
+    margin-top: 30px;
+    margin-bottom: 6px;
+}
+
+.mt2 div{
+    background-color: none;
+    margin-right: 0px;
+    line-height: 30px;
+    border: #01010a15 solid 2px;
+    border-radius: 5px;
+    height:max-content;
+    width: 99%;
+    margin-bottom: 30px;
+    text-align: center;
+    color: #000D6B;
+    font-size: normal;
+    padding-bottom: 10px;
+}
+
+.mt2 .btn1{
+    background-color: #000d6b;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.mt2 .btn2{
+    background-color: orange;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.mt2 button {
+    width: 140px;
+    padding: 0px 0px;
+    color: white;
+    cursor: pointer;
+    height: 30px;
+}
+
+/*Don't Be Late*/
+.dbl {
+    height: 200px;
+    padding: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #000c6bad;
+    background-blend-mode: soft-light;
+    margin-bottom: 80px;
+    background-image: url(./drive.b72e6f2d1ccdbd6550a9.jpg);
+}
+
+.dbl .camry {
+    display: none;
+}
+
+.dbl button {
+    height: 45px;
+    padding: 0px 15px;
+    align-content: center;
+    height: 30px;
+    border-radius: 4px;
+    font-weight: lighter;
+    font-size: small;
+    margin: 0px;
+}
+
+
+.words {
+align-self: center;
+justify-items: center;
+width: 550px;
+}
+
+.words p{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: bolder;
+    line-height: 30px;
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+
+/*Testimonials*/
+.testimonials {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    width: 99%;
+}
+
+.testimonials h3 {
+    color: orange;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+.testimonials p {
+    color: #000d6b;
+    font-size: 2.2rem;
+    font-weight: normal;
+    text-align: center;
+    margin-top: 21px;
+    margin-bottom: 40px;;
+}
+
+
+.span {
+    display: block;
+    padding: 0px 0px 0px 10px;
+    justify-content: space-between;
+    margin-top: 10px;
+    font-size: small;
+    color: #0b1035af;
+}
+
+.span div{
+    background-color: none;
+    line-height: 30px;
+}
+
+.testimonials .span img {
+    width: 30%;
+    height: 70px;
+    display: block;
+    border-radius: 5px;
+    margin-top: 14px;
+    margin-right: 15px;
+}
+
+.testimonials .span .john {
+    display: flex;
+}
+
+.testimonials .span p  {
+    font-size: 1.rem;
+    line-height: 0px;
+    padding-bottom: 0px;
+    margin-top: 35px;
+    display: block;
+}
+
+.john .customer {
+    color: black;
+    margin-top: -22px;
+    font-size: 1rem;
+}
+
+.john .doe {
+    position: relative;
+    top: 0px;
+    margin-top: 0px;
+}
+
+/**********************Latest Blogs**************************/
+
+.blog {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0px 0px 0px 10px;
+    margin: 0px;
+    height: max-content;
+    width: 99%;
+}
+
+.blog h3 {
+    color: orange;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    margin-top: 70px;
+    
+}
+
+
+.blog p {
+    color: #000d6b;
+    font-weight: bold;
+    margin-bottom: 50px;
+    margin-top: 15px;
+    font-size: 2rem;
+    line-height: 40px;
+}
+                
+.blog .mt {
+    display: inline-block;
+    justify-content: space-evenly;
+    font-size: .7rem;
+    color: none;
+}
+
+.blog .mt div{
+    background-color: none;
+    margin-right: 30px;
+    line-height: 30px;
+    border: #01010a15 solid 1px;
+    border-radius: 5px 5px 0px 0px;
+    height: max-content;
+    width: 98%;
+    margin-bottom: 40px;
+    text-align: left;
+    font-size: small;
+    color: rgba(0, 0, 0, 0.589);
+}
+
+.blog .mt img {
+    width: 100%;
+    height: 58%;
+    margin-top: 0px;
+    margin-bottom: 8px;
+    padding-left: 0px;
+    
+}
+
+.mt a  {
+    text-decoration: none;
+    color:#000d6b;
+    padding-left: 10px;
+    font-weight: normal;
+    font-size: 1.1rem;
+}
+
+.mt a:hover {
+    color: orange;            
+}
+
+.mt label a {
+    color: orange;
+    margin-bottom: 30px;
+    font-size: small;
+}
+
+.mt hr {
+    width: 95%;
+    margin-bottom: 10px;
+    border: #01010a15 solid .2px;
+}
+
+.mt p {
+    font-size: small;
+    color: rgba(0, 0, 0, 0.589);
+    padding: 14px 0px 7px 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    line-height: 20px;
+}
+
+
+.mt ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin-left: -20px;
+    margin-right: 30px;
+    font-size: 1rem;
+    color: #000d6b;
+    vertical-align: text-bottom;
+    align-items: center;
+}
+
+
+.mt ul ion-icon {
+    color: orange;
+    margin-right: 10px;
+    vertical-align: middle;
+    font-size: 1.2rem;
+    padding-bottom: 4px;
+}
+
+
+/*footer*/
+footer {
+    width: 95%;
+    display: block;
+    background-color:#000d6b;
+    height: fit-content;
+    color: white;
+    padding-bottom: 10px;
+    padding-right: 20px;
+}
+
+footer aside {
+    width: 100%;
+    display: block;
+    padding: 50px 10px 2px 20px;
+    justify-content: space-evenly;          
+    color: #fff;
+    line-height: 30px;
+    margin-bottom: 95px;
+}
+
+
+footer div {
+    width: 100%;
+    margin-top: 60px;
+}
+
+footer .quick {
+    width: 100%;
+    margin-left: 0px;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+    display: block;
+    width: 100%;
+}
+
+footer a:hover {
+    color: orange;
+}
+
+footer h3 {
+    margin: 0px 0px 10px 0px;
+}
+
+footer input {
+    height: 45px;
+    margin-top: 5px;
+    margin-right: 10px;
+    border-radius: 13px;
+    border: none;
+    background-color: #02093d;
+    color: white;
+    padding: 0px 20px;
+    width: 80%;
+}
+
+footer hr {
+    margin: 0px 10px 30px 20px;
+}
+
+footer p{
+    text-align: center;
+    margin-bottom: 90px;
+}
+
+
+
 }
